--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 	<section id="game-boards">
 		<!-- these are the draggable pieces -->
 		<div class="puzzle-pieces">
-			<img src="images/topLeft0.jpg" class="puzzle-image" alt="top left piece">
-			<img src="images/topRight0.jpg" class="puzzle-image" alt="top right piece">
-			<img src="images/bottomLeft0.jpg" class="puzzle-image" alt="bottom left piece">
-			<img src="images/bottomRight0.jpg" class="puzzle-image" alt="bottom right piece">
+			<img id="topLeft" src="images/topLeft0.jpg" class="puzzle-image" alt="top left piece">
+			<img id="topRight" src="images/topRight0.jpg" class="puzzle-image" alt="top right piece">
+			<img id="bottomLeft" src="images/bottomLeft0.jpg" class="puzzle-image" alt="bottom left piece">
+			<img id="bottomRight" src="images/bottomRight0.jpg" class="puzzle-image" alt="bottom right piece">
 		</div>
 
 		<!-- where we want to drop pieces, dropzone -->
@@ -34,10 +34,10 @@
 	<footer>
 		<p>Click on the thumbnail to change pieces</p>
 		<nav id="buttonHolder">
-			<img id="0" src="images/buttonZero.jpg" alt="puzzle 1">
-			<img id="1" src="images/buttonOne.jpg" alt="puzzle 2">
-			<img id="2" src="images/buttonTwo.jpg" alt="puzzle 3">
-			<img id="3" src="images/buttonThree.jpg" alt="puzzle 4">
+			<img data-bgrf="0" src="images/buttonZero.jpg" alt="puzzle 1">
+			<img data-bgrf="1" src="images/buttonOne.jpg" alt="puzzle 2">
+			<img data-bgrf="2" src="images/buttonTwo.jpg" alt="puzzle 3">
+			<img data-bgrf="3" src="images/buttonThree.jpg" alt="puzzle 4">
 		</nav>
 	</footer>
 
